# FastAPI

./: .env  .gitignore  README.md  alembic.ini  config.py  containers.py  context_vars.py  database.py  main.py  middlewares.py  pyproject.toml
User/domain/repository/: user_repo.py
User_tmp/domain/: user.py
common/: auth.py  logger.py  messaging.py
example/ch06_02/: async_ex.py  sync_ex.py
example/ch08_03/: env_ex.py
example/ch10_01/: background_task.py
example/ch10_02/: celery_result.py  celery_task.py  deserialize_result.py
example/ch11_01/: context_sample.py  context_test.py  middleware.py
migrations/: env.py
migrations/versions/: 2025_04_26_1919-1affb5e21352_add_user_table.py  2025_04_27_2110-b4d43e0ca84e_user_add_memo.py  2025_05_01_1700-f8c80aa01372_add_note_tag.py
note/application/: note_service.py
note/domain/: note.py
note/domain/repository/: note_repo.py
note/infra/db_models/: note.py
note/infra/repository/: note_repo.py
note/interface/controllers/: note_controller.py
user/application/: email_service.py  send_welcome_email_task.py  user_service.py  user_service_test.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py  user_repo_test.py
user/interface/controllers/: user_controller.py  user_controller_test.py
utils/: crypto.py
